--- a/wp-content/themes/blankslate-child/style.css
+++ b/wp-content/themes/blankslate-child/style.css
@@ -36,7 +36,7 @@ Updated: 2023-04-22 13:14:36
     width: 500px;
 }
 .menu .menu-item{
-    width:25%;
+    width:28%;
     margin-left: 10%;
     padding: 10px;
 }
@@ -140,21 +140,18 @@ Updated: 2023-04-22 13:14:36
 .galerie {
     justify-self:center;
     width: 79%;
-    padding-left: 20%;
+    padding-left: 16%;
     justify-content: space-between;
 }
 
-.wp-block-buttons{
-  margin-top: 4%;
-}
 
-.wp-block-button__link :hover {
+
+.wp-block-button__link:hover {
     background: #C02E44;
 
 }
 .cequilsenpensent {
-    font-family: "Syne-ExtraBold 800", "ExtraBold";
-    color: #3B8E46;
+    margin-top: 4%;
     margin-bottom: 9%;
 
 }
@@ -172,6 +169,10 @@ Updated: 2023-04-22 13:14:36
     color: black;
     
     text-align: start;
+}
+.avis{
+    width: 88%;
+    margin-left: 7%;
 }
 
 .texte {
@@ -211,15 +212,6 @@ Updated: 2023-04-22 13:14:36
     margin-bottom: 4%;
 }
 
-.wp-block-group {
-    margin-right: 31%;
-    margin-top: 5%;
-    margin-left: 31%;
-}
-
-.wp-block-column {
-    margin-left:-85%;
-}
 .nomequipe {
     text-align: center;
     font-family: "Syne";
@@ -228,18 +220,14 @@ Updated: 2023-04-22 13:14:36
     MARGIN-TOP: 10%;
 }
 
+.wp-block-group {
+    margin-right: 31%;
+    margin-top: 5%;
+    margin-left: 31%;
+}
 .nouscontacter {
-    font-family: "Syne";
-    color: black;
-    text-align: center;
-    line-height: 30px;
+   margin-top: 5%;
 }
-
-.wpforms-validate{
-    margin-left:33%;
-    font-family: "Syne";
-}
-
 
 
 
@@ -249,19 +237,23 @@ Updated: 2023-04-22 13:14:36
     font-family: "Syne";
     color: #fff;
     text-align: center;
-    margin-top: 9%;
 }
 
 .separateur1 {
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 18%;
+    margin-right: 18%;
+}
+
+.separateurformulaire{
+    height: 75%;
+    width: 1%;
 }
 
 .votrecommande {
     font-family: "Syne";
     color: #fff;
     margin-top: 3%;
-    margin-left: 20%;
+    margin-left: 14%;
     margin-bottom: 4%;
 
 }
@@ -269,16 +261,17 @@ Updated: 2023-04-22 13:14:36
 .photocommande {
     text-align: center;
     height: 128.86px;
-    width: 80%;
-    height: 20%;
-    margin-left: 10%;
+    width: 64%;
+    margin-left: 17%;
 
 }
 
-.formulairecommande{
-    margin-left: 10%;
+.wpforms-submit{
+    display:none;
+}
 
-
+.wp-element-button{
+    background-color: #DC9F96;
 }
 
 @media (max-width:480px) {
