--- a/wp-content/themes/blankslate-child/style.css
+++ b/wp-content/themes/blankslate-child/style.css
@@ -317,8 +317,13 @@ Updated: 2023-04-22 13:14:36
   }
 
 
-@media (max-width:480px) {
-    .feuille1,.feuille2{
+@media (max-width:1399px) {
+    .feuille1,.feuille2,.wp-image-261{
+        display: none;
+    }
+}
+@media (max-width:751px) {
+    .wp-image-148{
         display: none;
     }
 }
